--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
-
+        <div class="maindiv">
         Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
+        Rate <input type="range"> <span id="rate_val">10.25%</span> min="1" max= "20" value="10.25"></input> <br/>
+        No. of Years<select id ="years">
+            <option value = "1" >1</option>
+        </select><input type="number"  id="years">  <br/>
         Interest : <span id="result"></span><br>
 
-        <button onclick="compute()">Compute</button>
+        <button onclick="Compute()">Compute Interest</button>
+        <span id = "result">
+
+        </span>  
+        <footer>
+            &#169;
+        </footer>
     </body>
 </html>
