--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
         <div class="maindiv">
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="range"> <span id="rate_val">10.25%</span> min="1" max= "20" value="10.25"></input> <br/>
+        <h1>Simple Interest Calculator</h1>
+        Amount <input type="number"  id="principal" onchange = "validateAmount()">  <br/>
+        Rate <input type="range" step = "0.25" onchange="getSliderValue()" <span id="rate_val">10.25%</span> min="1" max= "20" value="10.25"></input> <br/>
         No. of Years<select id ="years">
             <option value = "1" >1</option>
         </select><input type="number"  id="years">  <br/>
         Interest : <span id="result"></span><br>
+    <select name="years" id="years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select><br/>
 
         <button onclick="Compute()">Compute Interest</button>
         <span id = "result">
