--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
           </select><br/>
 
         <button onclick="Compute()">Compute Interest</button>
-        <span id = "result">
-
-        </span>  
-        <footer>
-            &#169;
-        </footer>
+        <span id = "result"></span>
+        <span id = "result"></span>
+    <footer>&#169;</footer></div>
     </body>
 </html>
