--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <option value="10">10</option>
           </select><br/>
 
-        <button onclick="Compute()">Compute Interest</button>
+        <button onclick="compute()">Compute Interest</button>
         <span id = "result"></span>
         <span id = "result"></span>
     <footer>&#169;</footer></div>
