--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <button onclick="compute()">Compute Interest</button>
         <span id = "result"></span>
         <span id = "result"></span>
-    <footer>&#169;</footer></div>
+    <footer>&#169;Everyone can get rich</footer></div>
     </body>
 </html>
