--- a/index.html
+++ b/index.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
-<title>Simple Interest Calculator</title>
 <html>
     <head>
+        <title>Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="maindiv">
-            <h1 class="h1">Simple Interest Calculator</h1>
-            <table>
-            <tr>
-            <td>Amount</td><td><input required type="number" min="1" id="principal"></td>
-            </tr>
-            <br/>
-            <tr><td>Interest Rate</td><td><input type="range" class="slider" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"><span id="rate_val" name="rate_val">10.25%</span></td></tr>
-        <tr>
-            <td><label for="years">No. of Years</label></td>
-            <td>
-              <select name="years" id="years">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-              <option value="6">6</option>
-              <option value="7">7</option>
-              <option value="8">8</option>
-              <option value="9">9</option>
-              <option value="10">10</option>              
-            </select>
-            </td>
-        </tr>
-        <tr>
-        <td><button onclick="compute()">Compute Interest</button></td>
-        </tr>
-        <tr>
-        <td><span id="result"></span></td>
-        </tr>
-        </table>
-        <footer>&#169;Everyone Can Get Rich</footer>
-        </div>
+        <h1>Simple Interest Calculator</h1>
+        Amount <input type="number"  id="principal" onchange = "validateAmount()">  <br/>
+        Rate <input type="range" class="slider" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"><span id="rate_val" name="rate_val">10.25%></input> <br/>
+        No. of Years<select id ="years">
+            <option value = "1" >1</option>
+        </select><input type="number"  id="years">  <br/>
+        Interest : <span id="result"></span><br>
+    <select name="years" id="years">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select><br/>
+
+        <button onclick="compute()">Compute Interest</button>
+        <span id = "result"></span>
+        <span id = "result"></span>
+    <footer>&#169;Everyone Can Get Rich</footer></div>
     </body>
 </html>
