--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
         Amount <input type="number"  id="principal" onchange = "validateAmount()">  <br/>
-        Rate <input type="range" id="rate" min="1" max="20" step="0.25" value="10.25" onchange="updateRate()"><span id="rate_val">10.50%</span></input> <br/>
+        Rate <input type="range" step = "0.25" onchange="updateRate()" <span id="rate_val">10.25%</span> min="1" max= "20" value="10.25"></input> <br/>
         No. of Years<select id ="years">
             <option value = "1" >1</option>
         </select><input type="number"  id="years">  <br/>
