--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <title>Simple Interest Calculator</title>
@@ -9,7 +9,8 @@
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
         Amount <input type="number"  id="principal" onchange = "validateAmount()">  <br/>
-        Rate <input type="range" step = "0.25" onchange="updateRate()" <span id="rate_val">10.25%</span> min="1" max= "20" value="10.25"></input> <br/>
+        Rate <input type="range" class="slider" onchange="updateRate()" id="rate" min="1" max="20" step="0.25" value="10.25"><span id="rate_val" name="rate_val">10.25%></input> <br/>
+        Rate <input type="range" class="slider"  id="rate" min="1" max="20" step="0.25" value="10.25"><span id="rate_val" name="rate_val">10.25%> onchange="updateRate()"</input> <br/>
         No. of Years<select id ="years">
             <option value = "1" >1</option>
         </select><input type="number"  id="years">  <br/>
@@ -26,10 +27,10 @@
             <option value="9">9</option>
             <option value="10">10</option>
           </select><br/>
-
         <button onclick="compute()">Compute Interest</button>
         <span id = "result"></span>
         <span id = "result"></span>
     <footer>&#169;Everyone Can Get Rich</footer></div>
     </body>
 </html>
+
