--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Rate <input type="range" class="slider" onchange="updateRate()" id="rate" min="1" max="20" step="0.25" value="10.25"><span id="rate_val" name="rate_val">10.25%></input> <br/>
    
         No. of Years<select id ="years">
-            
+            <option value = "1" >1</option>
         </select><input type="number"  id="years">  <br/>
         Interest : <span id="result"></span><br>
     <select name="years" id="years">
